did-method/kustomize/did-method/overlays/local/did-method/add-ca.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: did-method
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: did-method-ca-cert
      containers:
        - name: did-method
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/did-method/tls
