did-method/kustomize/did-method/overlays/local/did-method/add-sidetree-mock-config.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

kind: Deployment
apiVersion: apps/v1
metadata:
  name: did-method
spec:
  template:
    spec:
      volumes:
        - name: sidetree-mock-config
          persistentVolumeClaim:
            claimName: sidetree-mock-config
      containers:
      - name: did-method
        volumeMounts:
          - mountPath: /etc/genesis-configs
            name: sidetree-mock-config
            subPath: genesis-configs
